<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/roomImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/room1a"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/roomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_1_name"
        app:layout_constraintStart_toEndOf="@+id/roomImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/roomPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_1_price"
        app:layout_constraintStart_toEndOf="@+id/roomImage"
        app:layout_constraintTop_toBottomOf="@+id/roomName" />

    <Button
        android:id="@+id/bookNowBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/book_now_btn"
        app:layout_constraintStart_toEndOf="@+id/detailsBtn"
        app:layout_constraintTop_toBottomOf="@+id/roomName" />

    <Button
        android:id="@+id/detailsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="21dp"
        android:text="@string/details_btn"
        app:layout_constraintStart_toEndOf="@+id/roomImage"
        app:layout_constraintTop_toBottomOf="@+id/roomPrice" />


</androidx.constraintlayout.widget.ConstraintLayout>