<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ReservationsHomeActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="410dp"
        android:layout_height="299dp"
        android:src="@drawable/waves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="cursive"
        android:text="@string/welcome"
        android:textColor="@color/gradient3"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="148dp"
        android:fontFamily="cursive"
        android:text="@string/hotel_name"
        android:textColor="@color/gradient3"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="155dp"
        android:layout_height="93dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/reservations_home_btns"
        android:drawableTop="@drawable/icon_profile_large"
        android:drawablePadding="5dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/profile_btn"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="156dp"
        android:layout_height="114dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="57dp"
        android:background="@drawable/reservations_home_btns"
        android:drawableTop="@drawable/icon_home_large"
        android:drawablePadding="5dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/rooms_btn"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="159dp"
        android:layout_height="114dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="57dp"
        android:background="@drawable/reservations_home_btns"
        android:drawableTop="@drawable/icon_hotel_large"
        android:drawablePadding="5dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/book_now_btn"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="155dp"
        android:layout_height="93dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/reservations_home_btns"
        android:drawableTop="@drawable/icon_bookings_large"
        android:drawablePadding="5dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/bookings_btn"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>